# gdnative-argon2-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
argon2_wrapper/: SCsub  argon2_wrapper.cpp  argon2_wrapper.hpp  config.py  register_types.cpp  register_types.h
argon2_wrapper/doc_classes/: Argon2Wrapper.xml
src/: gdlibrary.cpp
src/wrapper/: wrapper.cpp  wrapper.hpp
